[package]
name = "hson"
version = "0.1.1"
authors = ["Backprog"]
edition = "2018"
homepage = "https://github.com/backprog/hson"
repository = "https://github.com/backprog/hson.git"
description = "JSON like format for HTML"
readme = "README.md"
keywords = ["json", "html"]
license-file = "LICENSE.txt"
exclude = [
    "main.rs"
]

[dependencies]
uuid = { version = "0.7.1", features = ["v4"] }

[dev-dependencies]
lazy_static = "1.2.0"
